# NSAC_2025

./: .gitignore  README.md  electron-builder.yml  eslint.config.mjs  index.html  package-lock.json  package.json  pyproject.toml  tailwind.config.js  temp.txt  tsconfig.json  tsconfig.node.json  webpack.config.js
nsac_2025/: __main__.py
resources/: bins.json  consumableitem.json  items.json  manuItems.json  projectdetails.txt  regolithMix.json  types.ts
src/database/: bins.ts  database.ts  dbHandlers.ts  trashes.ts
src/main/: index.ts  main.ts
src/renderer/: App.tsx  index.html
src/renderer/src/: App.tsx  main.tsx
src/renderer/src/components/: MainInfomationPane.tsx
src/renderer/src/contexts/: ResidenceContext.ts  ResidenceProvider.tsx
src/renderer/src/habitatModule/: BinDetails.tsx  ConsumableItemsPopup.tsx  HabitatModule.tsx  ModuleStatistics.tsx  SmartBinItem.tsx
src/renderer/src/jazero/: Jazero.tsx  Residence.tsx
src/renderer/src/jezero/: BinStatusOverview.tsx  HabitatModule.tsx  HabitatModuleSelecter.tsx  Jezero.tsx  MainInfomation.tsx  ResidenceModule.tsx
src/renderer/src/lib/: formatUtils.ts  types.ts
src/renderer/src/recycleStation/: TrashTransferVisualization.tsx  recycleStation.tsx
