[project]
name = "nsac-2025"
version = "0.1.0"
description = ""
authors = [
    {name = "alien5516788",email = "93880176+alien5516788@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
nsac2025 = "nsac_2025.__main__:main"
